fix spacing

--- a/assets/css/cdz_cards.css
+++ b/assets/css/cdz_cards.css
@@ -62,7 +62,7 @@
 
 .cdz-link-card .kg-bookmark-description {
 	margin-left: 30px;
-	margin-top: 0.25em;
+	margin-top: 0.25em !important;
 	font-size: .9em;
 }
 
